# ProjSQLite_CmakeLists_Docker

./: Dockerfile  README.md
src/: CMakeLists.txt
